--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -10,10 +10,13 @@
   "author": "bytecode S.A.C.",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2"
   }
 }
