--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
+    "express-validation": "^3.0.2",
+    "http-status": "^1.4.2",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1",
