--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
+    "express-validation": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1",
@@ -23,6 +24,8 @@
     "defaults": "^1.0.3",
     "inquirer": "^7.0.6",
     "minimist": "^1.2.0",
-    "standard": "^14.3.1"
+    "standard": "^14.3.1",
+    "hashids": "^2.2.1",
+    "http-status": "^1.4.2"
   }
 }
