--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -15,6 +15,7 @@
     "chalk": "^3.0.0",
     "express": "^4.17.1",
     "express-validation": "^3.0.2",
+    "hashids": "^2.2.1",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
