--- a/runsocoApp/package.json
+++ b/runsocoApp/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.8.0",
+    "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-responsive-screen": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
