--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "minimist": "^1.2.0",
     "standard": "^14.3.1",
     "hashids": "^2.2.1",
-    "http-status": "^1.4.2"
+    "http-status": "^1.4.2",
+    "express-jwt-blacklist": "^1.1.0",
+    "express-jwt": "^5.3.3",
+    "express-jwt-permissions": "^1.3.3"
   }
 }
