--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
+    "express-jwt-blacklist": "^1.1.0",
+    "express-jwt-permissions": "^1.3.3",
     "express-validation": "^3.0.2",
     "hashids": "^2.2.1",
     "http-status": "^1.4.2",
