--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon runsoco-api/server.js"
+    "start": "nodemon runsoco-api/server.js && nodemon runsoco-socket/server.js"
   },
   "author": "bytecode S.A.C.",
   "license": "MIT",
@@ -29,6 +29,9 @@
     "http-status": "^1.4.2",
     "express-jwt-blacklist": "^1.1.0",
     "express-jwt": "^5.3.3",
-    "express-jwt-permissions": "^1.3.3"
+    "express-jwt-permissions": "^1.3.3",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "socketio-jwt": "^4.5.0"
   }
 }
