--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.6",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   }
 }
