--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -20,6 +20,7 @@
     "express-jwt-blacklist": "^1.1.0",
     "express-jwt-permissions": "^1.3.3",
     "express-validation": "^3.0.2",
+    "formidable": "^1.2.2",
     "hashids": "^2.2.1",
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
