--- a/runsoco-api/package.json
+++ b/runsoco-api/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "expo-server-sdk": "^3.5.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
